// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Should render order on on-duty mode 1`] = `
<div
  className="DutyOrder"
>
  <radio-button
    mix={
      Object {
        "block": "DutyOrder",
        "elem": "filter",
      }
    }
    name="view"
    onChange={[MockFunction]}
    size="s"
    theme="normal"
    value="on-duty"
    view="classic"
  >
    <radio-button__radio
      key="on-duty"
      value="on-duty"
    >
      i18n:on-duty
      <Number>
        3
      </Number>
    </radio-button__radio>
    <radio-button__radio
      key="not-on-duty"
      value="not-on-duty"
    >
      i18n:not-on-duty
      <Number>
        0
      </Number>
    </radio-button__radio>
  </radio-button>
  <ta-title
    level={1}
    mix={
      Object {
        "block": "DutyOrder",
        "elem": "title",
      }
    }
  >
    i18n:now
  </ta-title>
  <Person
    isDnd={false}
    isHoverable={false}
    isNotDeletable={true}
    key="0"
    name="Имя0 Фамилия0"
  />
  <abc-sortable-lists-context
    lists={
      Object {
        "0": Object {
          "items": Array [
            Object {
              "id": 2,
              "login": "user2",
              "name": Object {
                "en": "Name2 Surname2",
                "ru": "Имя2 Фамилия2",
              },
            },
            Object {
              "id": 3,
              "login": "user3",
              "name": Object {
                "en": "Name3 Surname3",
                "ru": "Имя3 Фамилия3",
              },
            },
          ],
          "max": 2,
          "min": 2,
        },
        "1": Object {
          "items": Array [
            Object {
              "id": 4,
              "login": "user4",
              "name": Object {
                "en": "Name4 Surname4",
                "ru": "Имя4 Фамилия4",
              },
            },
          ],
          "max": 2,
          "min": 2,
        },
      }
    }
    onReorder={[MockFunction]}
    order={
      Array [
        "0",
        "1",
      ]
    }
    overflowable={true}
  >
    <Component />
  </abc-sortable-lists-context>
</div>
`;

exports[`Render Should render order on on-not-duty mode 1`] = `
<div
  className="DutyOrder"
>
  <radio-button
    mix={
      Object {
        "block": "DutyOrder",
        "elem": "filter",
      }
    }
    name="view"
    onChange={[MockFunction]}
    size="s"
    theme="normal"
    value="on-not-duty"
    view="classic"
  >
    <radio-button__radio
      key="on-duty"
      value="on-duty"
    >
      i18n:on-duty
      <Number>
        3
      </Number>
    </radio-button__radio>
    <radio-button__radio
      key="not-on-duty"
      value="not-on-duty"
    >
      i18n:not-on-duty
      <Number>
        1
      </Number>
    </radio-button__radio>
  </radio-button>
  <Person
    isDnd={false}
    isHoverable={true}
    isNotDeletable={false}
    key="person-5"
    name="Имя5 Фамилия5"
  />
</div>
`;

exports[`Render Should render order with default data 1`] = `
<div
  className="DutyOrder"
>
  <radio-button
    mix={
      Object {
        "block": "DutyOrder",
        "elem": "filter",
      }
    }
    name="view"
    onChange={[MockFunction]}
    size="s"
    theme="normal"
    value="on-duty"
    view="classic"
  >
    <radio-button__radio
      key="on-duty"
      value="on-duty"
    >
      i18n:on-duty
      <Number>
        0
      </Number>
    </radio-button__radio>
    <radio-button__radio
      key="not-on-duty"
      value="not-on-duty"
    >
      i18n:not-on-duty
      <Number>
        0
      </Number>
    </radio-button__radio>
  </radio-button>
  <Comment>
    i18n:nobody-on-duty
  </Comment>
</div>
`;
